# ray-vector-io

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: branch.yaml
qdrant-scripts/: manual_point_upload.py  recreate_collection.py
ray_vector_io/: qdrant_query_with_datasource.py  qdrant_upload_with_datasink.py
ray_vector_io/qdrant/: qdrant_datasink.py  qdrant_datasource.py
scripts/qdrant/: docker-compose.yaml  manual_point_upload.py  recreate_collection.py
src/: qdrant_query_with_datasource.py  qdrant_upload_with_datasink.py
src/qdrant/: qdrant_datasink.py  qdrant_datasource.py
tests/: test_blank.py  test_qdrant_datasink.py
